<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- MY STRINGS -->

    <!-- Menu items  -->
    <string name="action_settings">Settings</string>
    <string name="action_newtr">New Transaction</string>
    
    <string name="app_name">Polcz Koltsegvetes</string>
    <string name="trformac_name">Polcz New Tranzaction</string>
    <string name="mainac_name">Polcz Koltsegvetes</string>
    <string name="hello_world">Hello world!</string>
    <string name="trform_remark">Remark, comment</string>
    <string name="trform_amount">Amount</string>
    
    <string name="lorem_ipsum">Elmentem a fogorvoshoz mert nagyon fajt a fogam es ezert koltottem eleg sokat, bizony sokat koltottem a fene egye meg</string>
    <string name="sample_date">2010&#8211;03&#8211;20</string>
    <string name="sample_short_text">ProbaText</string>
    <string name="sample_short_nr">11430</string>
    <string name="str_update_entry">Update entry</string>
    <string name="str_delete_entry">Delete entry</string>
    <string name="sample_id">12</string>
    <string name="sample_clname">Athelyezes_Innen</string>
    <string name="sample_mkname">Interspar</string>
    <string name="sample_caid">potp</string>
    <string name="kettospont">":  "</string>
    <string name="new_product">New Product</string>

    <!-- SLIDER MENU STRINGS -->

    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Find People</item>
        <item >Photos</item>
        <item >Communities</item>
        <item >Pages</item>
        <item >What\'s Hot</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="action_delete">Delete</string>
    <string name="action_update">Update</string>

</resources>
